Also updated all Horde scripts to their latest versions.
Added a script installer for the Dolibarr ERP/CRM package, thanks to Regis Houssin.
Added the --passfile flag to all domain, user, reseller and extra admin creation and modification commands, for reading the password from a file so it doesn't show up in ps output.
Added a DNS template option to control if an NS record is added for the Virtualmin system.
Disk quota monitoring now has an option to send email to mailboxes who are over quota.
When moving a virtual server, update the paths in the script logs DB to match the new location.
Backups and restores made by domain owners are now included in their bandwidth usage.
Added Module Config options to limit the number of concurrent backups, which defaults to 3. This prevents system owners from overloading the machine with their scheduled backups.
If Apache supports SNI, make the warning about clashing certs less dramatic.
When a mailbox user is created, make his spam, virus and trash directories under Maildir so that they show up in the IMAP folder list by default.
Backups and restores to and from S3 sub-directories are now supported.
---- Changes since 3.76 ----
Updated the Plans script installer to version 8.1.10, Dolibarr to 2.7.1, LimeSurvey to 1.87, DokuWiki to 2009-12-25, OpenX to 2.8.3, phpMyFAQ to 2.5.6, WordPress to 2.9.1, SimpleInvoices to 2010.1, Movable Type to 5.01, and ZenPhoto to 1.2.8.
Fixed the backup and restore for alias websites, which were previously not always restored correctly.
Changed statistics graphs to show load average in the regular scale, instead of converted to a percentage.
Added --autoreply-start, --autoreply-end and --autoreply-period flags to the modify-user API command, for changing other autoresponder settings.
Added a Module Config option under Defaults for new domains to set the characters which random passwords are made up of.
Added buttons to enable or disable multiple resellers at once.