@@ -1,0 +1,8 @@
+<header>Default database collation order</header>
+
+This field sets the character sort order that will be used by default for
+all new MySQL databases, either added via the <b>Edit Databases</b>
+page or when a virtual server with the MySQL feature is created. <p.
+
+<footer>
+
