@@ -2618,6 +2618,7 @@ tmpl_mysql_chgrp=Set group ownership of MySQL database files?
 tmpl_mysql_charset=Default database character set
 tmpl_mysql_charsetnone=MySQL default
 tmpl_mysql_charsetdef=Inherit from parent template
+tmpl_mysql_collate=Default database collation order
 tmpl_postgres_encoding=Default PostgreSQL encoding
 tmpl_postgres_encodingdef=Inherit from parent template
 tmpl_postgres_encodingnone=PostgreSQL default
@@ -2946,6 +2947,7 @@ database_title4=Disassociate Database
 database_rusure=Are you sure you want to delete the database $1? All data that it contains will be lost.
 database_ok=Delete Now
 database_charset=Character set for new database
+database_collate=Collation order for new database
 database_encoding=Encoding for new database
 database_opts=Additional options for $1
 database_edbdef=You are not allowed to delete the default database for a domain
